assets/css/gallery.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');

html, body {
    font-family: 'Lato', sans-serif;
    background-color: #050505;
    padding:0;
    margin:0;
}

.header{
    text-align:center;
    
    position: relative;
    opacity: 0.85;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-image: url("../images/header_bg.jpg");
    margin:0;
    padding: 30px;
}


.filter-buttons button{
    background-color: #000;
    padding:8px 20px;
    border: none;
    font-size:13pt;
    font-weight: 600;
    color: #eee;
}

.filter-buttons .filter-active{
    background-color: #555;
}

* { box-sizing: border-box; }
/*.container.grid {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}*/


.item {
    float: left;
    padding:0;
    margin:0;
}

.item {
    width: 50%;
} 

div .caption_tags{
    font-size:16pt;
}

@media only screen and (min-width: 500px) {
    .item {
        width: 33.33%;
    }

    div .caption{
        float: left;
        width: 60%;
    }

    div .caption_tags{
        float: right;
        width: 40%;
    }

}

@media only screen and (min-width: 800px) {
    .item {
        width: 25%;
    } 
}

@media only screen and (min-width: 1200px) {
    .item {
        width: 20%;
    } 
}


.item{
    padding: 10px;
}

.item img{
  display: block;
  max-width: 100%;
}

.fancybox-caption{
    overflow: hidden;
}

